--- a/style.css
+++ b/style.css
@@ -40,14 +40,25 @@ h1 {
 
 }
 
+#length-input-el {
+    width: 140px;
+    height: 40px;
+    text-align: center;
+    margin-right: 5px;
+    border-radius: 6px;
+    border-color: #10B981;
+    font-weight: 500;
+    font-size: 16px;
+}
+
 #gen-pass-btn {
     padding: 9px 15px;
     border-style: none;
     background: #10B981;
     color: white;
     border-radius: 6px;
-    width: 190px;
-    height: 42px;
+    width: 140px;
+    height: 40px;
     font-weight: 500;
     font-size: 16px;
 }
@@ -57,10 +68,10 @@ h1 {
     justify-content: space-between;
 }
 
-#pass-btn-one,
-#pass-btn-two {
-    width: 210px;
-    height: 40px;
+#pass-one,
+#pass-two {
+    min-width: 210px;
+    min-height: 40px;
     background: #273549;
     border-radius: 6px;
     border-style: none;
