--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
     border-radius: 10px;
 }
 
+/* Item one */
 h1 {
     font-family: 'Karla', sans-serif;
     font-weight: 800;
@@ -40,19 +41,47 @@ h1 {
 
 }
 
+/* Item two */
+#item-two {
+    display: flex;
+    gap: 20px;
+}
+
 #length-input-el {
+    -webkit-appearance: none;
     width: 160px;
-    height: 40px;
-    text-align: center;
-    margin-right: 5px;
-    border-radius: 6px;
-    border-color: #10B981;
-    font-weight: 500;
-    font-size: 16px;
+    height: 15px;
+    border-radius: 5px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+}
+
+#length-input-el:hover {
+    opacity: 1;
+}
+
+#length-input-el::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #04AA6D;
+    cursor: pointer;
+}
+
+#length-input-el::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #04AA6D;
+    cursor: pointer;
 }
 
 #gen-pass-btn {
-    padding: 9px 15px;
     border-style: none;
     background: #10B981;
     color: white;
@@ -63,6 +92,7 @@ h1 {
     font-size: 16px;
 }
 
+/* Item three */
 #item-three {
     display: flex;
     justify-content: space-between;
