--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 
 .container {
     width: 550px;
-    height: 600px;
+    height: 650px;
     background: #ECFDF5;
     margin: auto;
     margin-top: 80px;
@@ -34,11 +34,18 @@ h1 {
     margin-bottom: 10px;
 }
 
+.customize {
+    font-family: 'Karla', sans-serif;
+    font-weight: 800;
+    font-size: 30px;
+    margin: 0;
+    letter-spacing: -0.05em;
+}
+
 #sub-header {
     font-weight: 400;
     font-size: 20px;
     color: #6B7280;
-
 }
 
 /* Item two */
@@ -63,6 +70,7 @@ h1 {
     opacity: 0.7;
     -webkit-transition: .2s;
     transition: opacity .2s;
+    margin-top: 12px;
 }
 
 #length-input-el:hover {
@@ -85,10 +93,6 @@ h1 {
     border-radius: 50%;
     background: #04AA6D;
     cursor: pointer;
-}
-
-#symbols {
-
 }
 
 #gen-pass-btn {
